# infers

./: .gitignore  AGENTS.md  Cargo.toml  PRD.md  infers_kernel_lib.ll  rust-toolchain.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  request.rs  response.rs  streaming.rs  template.rs  tool_parser.rs
crates/backends/gguf/: Cargo.toml
crates/backends/gguf/src/: lib.rs
crates/backends/native/: Cargo.toml
crates/backends/native/src/: add.rs  attention.rs  chat_template.rs  decode.rs  embedding.rs  engine.rs  eviction.rs  gdn.rs  gemm_dispatch.rs  gpu_cache.rs  lib.rs  mlp.rs  mtp.rs  norm.rs  prefill.rs  probe.rs  quant.rs  resources.rs  rope.rs  sample.rs  sync.rs  upload.rs  workspace.rs
crates/backends/native/src/attention/: flat_forward.rs  mod.rs  paged_decode.rs  paged_forward.rs
crates/backends/native/tests/: batched_decode_test.rs  smoke_test.rs  smoke_test_mmap.rs  smoke_test_mmap_only.rs
crates/cuda/: Cargo.toml  build.rs
crates/cuda-oxide-coexist/: .gitignore  Cargo.toml  cuda_oxide_coexist.ll  cuda_oxide_coexist.opt.ll  cuda_oxide_coexist.ptx
crates/cuda-oxide-coexist/src/: main.rs
crates/cuda-oxide-kernels/: .gitignore  Cargo.toml
crates/cuda-oxide-kernels/kernel-lib/: Cargo.toml
crates/cuda-oxide-kernels/kernel-lib/src/: activation_kernels.rs  attention_kernels.rs  bf16_kernels.rs  common_kernels.rs  fp8_kernels.rs  gdn_kernels.rs  int4_kernels.rs  lib.rs  norm_kernels.rs  nvfp4_kernels.rs  shared.rs
crates/cuda-oxide-kernels/src/: bench.rs  main.rs
crates/cuda-oxide-poc/: Cargo.toml
crates/cuda-oxide-poc/src/: main.rs
crates/cuda/kernels/infers/: common.cuh  conv1d_depthwise.cu  elementwise.cu  embedding.cu  fp8_quantize.cu  gdn_chunked_gated_delta_prefill.cu  gdn_gated_delta_prefill.cu  gdn_gated_delta_update.cu  gdn_mamba2_prefill.cu  gdn_mamba2_update.cu  gdn_prefill.cu  gdn_recurrent_step.cu  gdn_update.cu  int4_gemm.cu  kv_cache.cu  l2norm_bf16.cu  paged_attention_decode.cu  paged_kv_read.cu  paged_kv_write.cu  rms_norm_gated.cu  rmsnorm.cu  rope.cu  sampling.cu  silu.cu  softmax.cu
crates/cuda/src/: context.rs  gemm.rs  kernels.rs  lib.rs  memcpy2d.rs  memory.rs  modules.rs  nccl.rs  oxide_bridge.rs  pinned.rs  stream.rs
crates/cuda/tests/: gdn_chunked_prefill_test.rs  gdn_recurrent_step_test.rs  gemm_compare.rs  nvfp4_debug.rs  rms_norm_gated_test.rs
crates/kv/: Cargo.toml
crates/kv/src/: cow.rs  eviction.rs  lib.rs  manager.rs  page.rs  pool.rs  prefix.rs  quant.rs  table.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  registry.rs
crates/model/: Cargo.toml
crates/model-loader-heap/: Cargo.toml
crates/model-loader-heap/src/: lib.rs
crates/model/src/: budget.rs  config.rs  formats.rs  lib.rs  loader.rs  mmap.rs  sharding.rs  weights.rs
crates/model/tests/: shard_equiv.rs
crates/mtp/: Cargo.toml
crates/mtp/src/: engine.rs  head.rs  lib.rs  metrics.rs  verify.rs
crates/parallelism/: Cargo.toml
crates/parallelism/src/: comm.rs  engine.rs  lib.rs  microbatch.rs  pp.rs  stage.rs  tp.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: batch.rs  lib.rs  lifecycle.rs  pressure.rs  queue.rs  scheduler.rs  session.rs
crates/scheduler/tests/: integration.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  orchestrator.rs  server.rs  state.rs
crates/server/src/handlers/: chat.rs  health.rs  models.rs
crates/server/tests/: tracing.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
docs/: debugging-playbook.md
lat.md/: api.md  arch.md  kernel-optimization.md  lat.md  misc.md  parallel.md  testing.md
lat.md/.cache/: lat_init.json
lat.md/tests/: gdn_chunked_prefill_test.md  gdn_recurrent_step_test.md  gemm_compare.md  nvfp4_fused_compare.md  nvfp4_ref_compare.md  oracle_hidden_state_compare.md  rms_norm_gated_test.md  tests.md
plan/: 002-cuda-backend.md  003-model-loading.md  006-paged-attention.md  008-gpu-weight-cache.md  010-eviction.md  011-eviction-wiring.md  014-tool-calls.md  018-instrumentation.md  022-paged-prefill-wiring.md  023-cuda-oxide-exploration.md  024-cuda-oxide-quant.md  025-cleanup-unfinished-features.md  026-nvfp4-support.md  027-dequant-to-bf16.md  028-fused-quant-gemm.md  029-gpu-resident-engine.md  030-async-pipeline.md  031-continuous-batching.md  032-cuda-graphs.md  033-040-kernel-optimization-sprint.md  033-kernel-microbench-harness.md  034-int4-gemm-v4-vectorized-loads.md  035-paged-attention-decode-optimization.md  036-gdn-recurrent-step-optimization.md  037-rmsnorm-optimization.md  038-nvfp4-gemm-v4-vectorized-loads.md  039-nccl-allreduce-optimization.md  040-host-dispatch-overhead.md  041-split-kernel-library.md  042-kernel-optimization-round-1-2.md  043-kernel-optimization-round-3.md  044-cuda-graphs-decode.md  045-engine-optimization-nccl-batched.md  046-cuda-oxide-async-backend.md  046-split-large-files.md  047-batched-concurrent-decode.md  README.md  cleanup-phase-a.md  cleanup-phase-b.md  phase-1-bootstrap.md  (+21 more)
plan/done/: 001-bootstrap.md  002-cuda-backend.md  005-pp-microbatching.md  007-gdn-rewrite.md  020-tracing-otlp.md  021-zero-copy-weights.md
plan/research/: api.md  architecture.md  cuda-oxide.md  kernels.md  parallelism.md  quantization.md
scripts/: compare_gdn_intermediates.py  compare_gdn_tp2.py  compare_hidden_states.py  compare_layers.py  debug_qkv_split.py  dump_oracle_hidden.py  dump_ref_attn_l3.py  dump_ref_attn_l3_v2.py  dump_ref_gdn.py  dump_ref_hidden.py  extract-kernels.sh  verify_int4_weights.py
tests/: gdn_compare.py  gdn_layer_compare.py  gdn_ref_intermediates.py  ref_intermediates.py  ref_layer_compare.py  run_gdn_verify.sh
tests/compare/: check_weights.py  chunked_vs_sequential.py  compare.py  config.py  cos.py  debug_chunked_kernel.py  dequant.py  hf_compare.py  io.py  oracle.py  weight_loader.py
tests/compare/stages/: attention.py  base.py  final.py  gdn.py  mlp.py
