[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/api",
    "crates/scheduler",
    "crates/kv",
    "crates/model",
    "crates/backends/native",
    "crates/backends/gguf",
    "crates/cuda",
    "crates/parallelism",
    "crates/tokenizer",
    "crates/metrics",
    "crates/mtp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["infers"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core async
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-stream = "0.3"
pin-project = "1"

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Metrics
prometheus = "0.14"

# CUDA (cudarc - stable)
cudarc = { version = "0.19.7", features = ["cublaslt", "nccl", "cuda-13020"] }

# CUDA (cuda-oxide - nightly)
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide" }
cuda-async = { git = "https://github.com/NVlabs/cuda-oxide" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide" }

# ML / Data
safetensors = "0.8"
memmap2 = "0.9"

# Testing
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
