[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/api",
    "crates/scheduler",
    "crates/kv",
    "crates/model",
    "crates/backends/native",
    "crates/backends/gguf",
    "crates/cuda",
    "crates/parallelism",
    "crates/tokenizer",
    "crates/metrics",
    "crates/mtp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["infers"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core async
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
async-stream = "0.3.6"

# HTTP / API
axum = { version = "0.8.9", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = "3.21.0"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Metrics
prometheus = "0.14.0"

# CUDA (cudarc - stable)
cudarc = { version = "0.19.7", features = ["cublaslt", "nccl", "cuda-13020", "f16"] }

# CUDA (cuda-oxide - nightly)
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide" }
cuda-async = { git = "https://github.com/NVlabs/cuda-oxide" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide" }

# ML / Data
safetensors = "0.8.0"
memmap2 = "0.9.10"

# Half-precision floats
half = "2.6.0"

# Testing
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
