[package]
name = "infers-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

cudarc = { workspace = true }

# CUDA (cuda-oxide) — deferred to future phase; requires cargo-oxide toolchain
# cuda-core = { workspace = true }
# cuda-async = { workspace = true }
# cuda-host = { workspace = true }

[dev-dependencies]
