[package]
name = "infers-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }

cudarc = { workspace = true }

# CUDA (cuda-oxide) — bridge module for loading pre-compiled kernels
cuda-core = { workspace = true }
cuda-host = { workspace = true }

[dev-dependencies]
