[package]
name = "infers-model-loader-heap"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Heap-only weight loader — used solely for sharding equivalence tests"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
safetensors = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
tracing = { workspace = true }
infers-model = { path = "../model" }

[dev-dependencies]
tempfile = { workspace = true }
