[package]
name = "infers-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
infers-model-loader-heap = { path = "../model-loader-heap" }

[[test]]
name = "shard_equiv"
