[package]
name = "infers-mtp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
infers-cuda = { path = "../cuda" }
infers-model = { path = "../model" }
half = { workspace = true }
tracing = { workspace = true }
