[package]
name = "infers-parallelism"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
half = { workspace = true }
infers-cuda = { path = "../cuda" }
infers-kv = { path = "../kv" }
infers-model = { path = "../model" }
tracing = { workspace = true }
