[package]
name = "infers-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
infers-api = { path = "../api" }
infers-metrics = { path = "../metrics" }

[[bin]]
name = "infers"
path = "src/main.rs"
