[package]
name = "infers-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
# Internal crates
infers-api = { path = "../api" }
infers-metrics = { path = "../metrics" }
infers-scheduler = { path = "../scheduler" }
infers-backend-native = { path = "../backends/native" }
infers-tokenizer = { path = "../tokenizer" }
infers-kv = { path = "../kv" }
infers-cuda = { path = "../cuda" }
infers-mtp = { path = "../mtp" }

# External
tokio-stream = "0.1"

[[bin]]
name = "infers"
path = "src/main.rs"
