[package]
name = "infers-backend-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
infers-cuda = { path = "../../cuda" }
infers-kv = { path = "../../kv" }
infers-model = { path = "../../model" }
infers-mtp = { path = "../../mtp" }
infers-tokenizer = { path = "../../tokenizer" }
bytes = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
minijinja = { version = "2", features = ["json"] }

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[dependencies.clap]
workspace = true
features = ["derive"]

[dev-dependencies]
